--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ VB
  
 <h1>Hello welcome this is my blog <h1/>
 
- lekeleaks#>_ ls -la
+<h2> lekeleaks#>_ ls -la
  file
  notes.html
- 
+ <h2/>
  
  
  
