--- a/index.html
+++ b/index.html
@@ -1,21 +1,29 @@
-<html>
-<head> <head/>
- 
- 
-<body> 
-<h1> <isrvb@VB> <h1/>
- <h1> VB <h1/>
+<!DOCTYPE html>
+<head>
+  <style type="text/css">
+    body {
+    color: black;
+     backgroup-color:white;
+   }
+   </style>
+ </head>
+<tiitle>Israel VB</tiitle>
 
- 
-<h1>Hello welcome Hacker<h1/>
+<link rel="icon" type="image/jpg" href=""/>
 
-<h2> lekeleaks#>_ ls -la <h2/>
- <h1> file<h1/>
- <h1> notes.html <h1/>
+<!-- HTML -->
+
+<!-- Custom Styles -->
+<link rel="stylesheet" href="style.css">
+<img src="https://israelvb.github.io/assets/default-icon.png">
+</head>
+
+<body>
+ <p>Nothing to see here...</p>
+ <h1>Hi</h1>
+ <h2>HEY!</h2>
  
- 
- 
- 
-<h1> @VB <h1/>
- <body/>
-<html/>
+ <!-- Project -->
+ <script src="main.js"></script>
+</body>
+</html>
