--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <!-- Custom Styles -->
 <link rel="stylesheet" href="style.css">
 <img src="https://israelvb.github.io/assets/default-icon.png">
+<img src="https://developer.huawei.com/dev_index/mainIndexEn/Ict.png">
 </head>
 
 <body>
